--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "webpack serve"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-loader": "^9.1.3",
     "path-browserify": "^1.0.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
